[tool.poetry]
name = "blocks"
version = "1.0.0"
description = ""
authors = ["Aalap Shah <aalap.shah@yale.edu>"]


[tool.poetry.dependencies]
python = "3.7"
pillow = "*"
numpy = "*"
scipy = "*"
sklearn = "*"
matplotlib = "*"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
